crates/core/talkbank-parser-re2c/src/snapshots/test_re2rust__tests__mor_example.snap
---
source: src/lib.rs
expression: tokens
---
[
    HeaderName(
        "@UTF8",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@Begin",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@Languages",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "eng",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@Participants",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "CHI Child, MOT Mother",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@ID",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "eng|bates|CHI|1;08.|female|normal||Child|||",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@ID",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "eng|bates|MOT|||||Mother|||",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@Comment",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "Simple example",
    ),
    EndOfLine(
        "\n",
    ),
    MainBegin(
        "*",
    ),
    MainName(
        "MOT",
    ),
    MainColonTab(
        ":\t",
    ),
    MainWord(
        "the",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "people",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "are",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "making",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "cakes",
    ),
    MainSpaces(
        " ",
    ),
    MainPeriod(
        ".",
    ),
    EndOfLine(
        "\n",
    ),
    DependentBegin(
        "%",
    ),
    DependentMor(
        "mor:\t",
    ),
    MorSegment(
        "det",
    ),
    MorBar(
        "|",
    ),
    MorSegment(
        "the",
    ),
    MorSpaces(
        " ",
    ),
    MorSegment(
        "n",
    ),
    MorBar(
        "|",
    ),
    MorSegment(
        "people",
    ),
    MorSpaces(
        " ",
    ),
    MorSegment(
        "v",
    ),
    MorColon(
        ":",
    ),
    MorSegment(
        "aux",
    ),
    MorBar(
        "|",
    ),
    MorSegment(
        "be",
    ),
    MorAmpersand(
        "&",
    ),
    MorSegment(
        "PRES",
    ),
    MorSpaces(
        " ",
    ),
    MorSegment(
        "v",
    ),
    MorBar(
        "|",
    ),
    MorSegment(
        "make-ING",
    ),
    MorSpaces(
        " ",
    ),
    MorSegment(
        "n",
    ),
    MorBar(
        "|",
    ),
    MorSegment(
        "cake-PL",
    ),
    MorSpaces(
        " ",
    ),
    MainPeriod(
        ".",
    ),
    EndOfLine(
        "\n",
    ),
    MainBegin(
        "*",
    ),
    MainName(
        "MOT",
    ),
    MainColonTab(
        ":\t",
    ),
    MainWord(
        "hi",
    ),
    MainSpaces(
        " ",
    ),
    MainPeriod(
        ".",
    ),
    EndOfLine(
        "\n",
    ),
    DependentBegin(
        "%",
    ),
    DependentMor(
        "mor:\t",
    ),
    MorSegment(
        "co",
    ),
    MorBar(
        "|",
    ),
    MorSegment(
        "hi",
    ),
    MorSpaces(
        " ",
    ),
    MainPeriod(
        ".",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@End",
    ),
    EndOfLine(
        "\n",
    ),
]
