crates/core/talkbank-parser-re2c/src/snapshots/test_re2rust__tests__words.snap
---
source: src/lib.rs
expression: tokens
---
[
    HeaderName(
        "@UTF8",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@Begin",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@Languages",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "eng",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@Participants",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "CHI Child, MOT Mother",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@ID",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "eng|bates|CHI|1;08.|female|normal||Child|||",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@ID",
    ),
    HeaderColonTab(
        ":\t",
    ),
    HeaderContent(
        "eng|bates|MOT|||||Mother|||",
    ),
    EndOfLine(
        "\n",
    ),
    MainBegin(
        "*",
    ),
    MainName(
        "CHI",
    ),
    MainColonTab(
        ":\t",
    ),
    MainWord(
        "hey",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "man",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "what",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "in",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "the",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "world",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "isn't",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "this",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "gonna",
    ),
    MainSpaces(
        " ",
    ),
    MainBracketBegin(
        "[",
    ),
    BracketReplacement(
        ":",
    ),
    BracketReplacementContent(
        "going to",
    ),
    BracketEnd(
        "]",
    ),
    MainSpaces(
        " ",
    ),
    MainQuestion(
        "?",
    ),
    EndOfLine(
        "\n",
    ),
    MainBegin(
        "*",
    ),
    MainName(
        "MOT",
    ),
    MainColonTab(
        ":\t",
    ),
    MainWord(
        "hey",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "a/c",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "what",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "in",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "the",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "universe",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "is",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "in",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "this",
    ),
    MainSpaces(
        " ",
    ),
    MainWord(
        "fé",
    ),
    MainSpaces(
        " ",
    ),
    MainQuestion(
        "?",
    ),
    EndOfLine(
        "\n",
    ),
    HeaderName(
        "@End",
    ),
    EndOfLine(
        "\n",
    ),
]
